Make the YoonImage test sample - Add the open source library https://github.com/ArashPartow/bitmap

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(ConsoleTest)
 
 set(CMAKE_CXX_STANDARD 17)
 
+# Link the directory for header and library
+include_directories(include/bitmap)  # https://github.com/ArashPartow/bitmap#readme
+
 # CMake instructions to make the static library
 add_library(YoonImage
         src/Converter.cpp src/Converter.h
