--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(include/bitmap)  # https://github.com/ArashPartow/bitmap#rea
 # CMake instructions to make the static library
 add_library(YoonImage
         src/Image.cpp src/Image.h
-        src/enum.h)
+        src/enum.h src/bitmap.h src/bitmap.cpp)
 
 # CMake instructions to test using the static library
 add_executable(ConsoleTest main.cpp)
