Bring-up the BitmapFactory - Fix the undefined module error - Add the LoadBitmap, SaveBitmap function in the YoonImage - The sample program is fitted the renew

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,12 @@ project(ConsoleTest)
 set(CMAKE_CXX_STANDARD 17)
 
 # Link the directory for header and library
-include_directories(
-        include/bitmap  # https://github.com/ArashPartow/bitmap#readme
-)
+include_directories(include/bitmap)  # https://github.com/ArashPartow/bitmap#readme
 
 # CMake instructions to make the static library
 add_library(YoonImage
-        src/Image.cpp
-        src/Image.h
+        src/Image.cpp src/bitmap.cpp
+        src/Image.h src/bitmap.h
         src/enum.h)
 
 # CMake instructions to test using the static library
