Modify the structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(YoonFactory)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(YoonFactory)
 add_subdirectory(YoonImage)
 add_subdirectory(ConsoleTest)
