--- a/ConsoleTest/CMakeLists.txt
+++ b/ConsoleTest/CMakeLists.txt
@@ -1,7 +1,7 @@
-include_directories(${YoonFactory_SOURCE_DIR}/YoonImage/src)
+include_directories(${YoonFactory_SOURCE_DIR}/YoonImage/include)
 
 link_directories(${YoonFactory_BINARY_DIR}/YoonImage)
 
-add_executable(ConsoleTest main.cpp)
+add_executable(console-test main.cpp)
 
-target_link_libraries(ConsoleTest yoonimage)
+target_link_libraries(console-test yoonimage)
