--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required(VERSION 3.10)
 project(yoonfactory)
 
 set(CMAKE_CXX_STANDARD 20)
+set(PROJECT_NAME "yoonfactory")
 
 add_subdirectory(yoonimage)
